--- a/slides/20-decision-trees.Rmd
+++ b/slides/20-decision-trees.Rmd
@@ -29,7 +29,7 @@ hidden <- (X.mat[,1]<0.4 & X.mat[,2]<0.5) |
   (X.mat[,1] > 0.7 & X.mat[,2] > 0.4)
 y.vec <- ifelse(hidden-0.5+rnorm(N.row,sd=0.5) < 0, 0, 1)
 table(y.vec, hidden)
-library(ggplot2)
+library(animint2)
 library(data.table)
 
 xy.dt <- data.table(y=y.vec, X.mat)
@@ -69,20 +69,35 @@ candidate_loss <- function(indices){
     loss.constant <- Loss(before.start, after.end)
     split.loss.list[[feature]] <- data.table(
       feature,
-      split.index=seq_along(split.point), split.point,
+      split.index=seq_along(split.point), 
+      data.before=x.ord[-length(x.ord)],
+      split.point,
+      data.after=x.ord[-1],
       loss.split,
       loss.constant)
   }
   rbindlist(split.loss.list)
 }
 
-new_node <- function(indices,depth=0L,parent=NULL){
+new_node <- function(indices,parent=NULL,node.type="root"){
   node <- new.env()
+  if(node.type=="root"){
+    node$bounds <- data.table(
+      V1min=0,V1max=1,
+      V2min=0,V2max=1)
+  }else{
+    node$bounds <- parent$bounds
+    node$bounds[[sprintf(
+      "V%d%s",
+      parent$best$feature,
+      if(node.type=="lo")"max" else "min"
+    )]] <- parent$best$split.point
+  }
   node$id <- next.node.id
   node$parent <- parent
   node.list[[next.node.id]] <<- node
   next.node.id <<- next.node.id + 1L
-  node$depth <- depth
+  node$depth <- if(is.null(parent))0L else parent$depth+1L
   node$indices <- indices
   node$pred <- mean(y.vec[indices])
   node$loss <- candidate_loss(indices)
@@ -95,7 +110,7 @@ new_node <- function(indices,depth=0L,parent=NULL){
     for(child.name in names(logical.list)){
       is.child <- logical.list[[child.name]]
       child.indices <- indices[is.child]
-      node[[child.name]] <- new_node(child.indices,node$depth+1L,node)
+      node[[child.name]] <- new_node(child.indices,node,child.name)
     }
     c(node$lo, node$hi)
   }
@@ -108,7 +123,7 @@ new_node <- function(indices,depth=0L,parent=NULL){
       split.point=node$best$split.point)
   }
   node$expr <- function(){
-    if(node$terminal)node$pred
+    if(node$terminal)node$id
     else substitute(
       ifelse(X[,FEAT]<VAL, LO, HI), with(node$best, list(
         FEAT=feature, VAL=split.point,
@@ -120,78 +135,6 @@ new_node <- function(indices,depth=0L,parent=NULL){
   }
   node
 }
-
-grid.vec <- seq(0,1,by=0.05)
-grid.dt <- CJ(V1=grid.vec,V2=grid.vec)
-grid.mat <- as.matrix(grid.dt)
-node.list <- list()
-next.node.id <- 1L
-dtree <- new_node(1:N.row)
-term.list <- list(dtree)
-grid.pred.list <- list()
-train.pred.list <- list()
-for(iteration in 0:9){
-  if(iteration>0){
-    (term.best <- data.table(
-      node.i=seq_along(term.list)
-    )[
-    , term.list[[node.i]]$best
-    , by=node.i])
-    split.i <- term.best[which.min(loss.split-loss.constant), node.i]
-    term.list <- c(term.list[-split.i], term.list[[split.i]]$split())
-  }
-  pred.prob <- dtree$predict(X.mat)
-  train.pred.list[[paste(iteration)]] <- data.table(
-    iteration,
-    xy.dt,
-    pred.prob,
-    pred.class=ifelse(pred.prob<0.5, 0, 1)
-  )[, correct := pred.class == y]
-  grid.pred.list[[paste(iteration)]] <- data.table(
-    iteration,
-    grid.dt,
-    pred = dtree$predict(grid.mat))
-}
-(grid.pred <- rbindlist(grid.pred.list))
-(train.pred <- rbindlist(train.pred.list))
-ggplot()+
-  facet_wrap(. ~ iteration, labeller=label_both,nrow=2)+
-  geom_tile(aes(
-    V1, V2, fill=pred),
-    data=grid.pred)+
-  geom_point(aes(
-    V1, V2, fill=y, color=correct),
-    shape=21,
-    data=train.pred)+
-  scale_color_manual(values=c("TRUE"="white","FALSE"="black"))+
-  scale_fill_gradient2(low="blue",high="red",midpoint=0.5)+
-  scale_x_continuous(breaks=seq(0,1,by=0.2))+
-  scale_y_continuous(breaks=seq(0,1,by=0.2))+
-  coord_equal()
-
-viz.dt <- data.table(
-  node.i=seq_along(term.list)
-)[
-, term.list[[node.i]]$loss
-, by=node.i]
-ggplot()+
-  geom_point(aes(
-    split.index, loss.split-loss.constant),
-    shape=1,
-    data=viz.dt)+
-  facet_grid(. ~ node.i + feature, labeller=label_both, scales="free")
-
-ggplot()+
-  geom_point(aes(
-    split.point, loss.split-loss.constant),
-    shape=1,
-    data=viz.dt)+
-  facet_grid(. ~ node.i + feature, labeller=label_both)
-
-(node.parent.dt <- rbindlist(lapply(node.list, with, data.table(
-  id, depth, parent=if(is.null(parent))NA_integer_ else parent$id,
-  label_dt()
-))))
 tree_layout <- function(node.dt, space=0.5){
   x <- id <- depth <- J <- parent.x <- size <-
     parent.depth <- parent <- NULL
@@ -228,29 +171,290 @@ qp.x <- function
   sol <- quadprog::solve.QP(D, target, A, b0)
   sol$solution
 }
-(node.layout.dt <- tree_layout(
-  node.parent.dt
-)[
-, label := ifelse(
-  terminal,
-  sprintf("p=%.2f\nN=%d", prob1, N),
-  sprintf("X%d<%.2f", feature, split.point)
-)][])
 
-    
+grid.vec <- seq(0,1,by=0.05)
+grid.dt <- CJ(V1=grid.vec,V2=grid.vec)
+grid.mat <- as.matrix(grid.dt)
+node.list <- list()
+next.node.id <- 1L
+dtree <- new_node(1:N.row)
+current.loss <- dtree$best$loss.constant
+term.list <- list(dtree)
+grid.pred.list <- list()
+rect.pred.list <- list()
+train.pred.list <- list()
+node.layout.list <- list()
+tree.info.list <- list()
+candidate.dt.list <- list()
+for(iteration in 0:9){
+  pred.prob <- dtree$predict(X.mat)
+  tree.info.list[[paste(iteration)]] <- data.table(
+    iteration,
+    loss=current.loss,
+    nodes=length(node.list),
+    leaves=length(term.list))
+  train.pred.list[[paste(iteration)]] <- data.table(
+    iteration,
+    row_id=1:nrow(xy.dt),
+    xy.dt,
+    pred.prob,
+    pred.class=ifelse(pred.prob<0.5, 0, 1)
+  )[, correct := pred.class == y]
+  rect.pred.list[[paste(iteration)]] <- rbindlist(lapply(
+    node.list, with, data.table(iteration, bounds, id, pred, terminal)))
+  grid.pred.list[[paste(iteration)]] <- data.table(
+    iteration,
+    grid_id=1:nrow(grid.dt),
+    grid.dt,
+    pred = dtree$predict(grid.mat))
+  (node.parent.dt <- rbindlist(lapply(node.list, with, data.table(
+    id, depth, parent=if(is.null(parent))NA_integer_ else parent$id,
+    label_dt(), iteration
+  ))))
+  node.layout.list[[paste(iteration)]] <- tree_layout(
+    node.parent.dt
+  )[
+  , label := ifelse(
+    terminal,
+    sprintf("p=%.2f", prob1),
+    sprintf("X%d<%.2f", feature, split.point)
+  )][]
+  candidate.dt.list[[paste(iteration)]] <- rbindlist(lapply(
+    term.list, with, data.table(iteration, id, loss)))
+  (term.best <- data.table(
+    node.i=seq_along(term.list)
+  )[
+  , term.list[[node.i]]$best
+  , by=node.i])
+  best.row <- term.best[
+  , loss.diff := loss.split-loss.constant
+  ][
+    which.min(loss.diff)
+  ][]
+  current.loss <- current.loss+best.row$loss.diff
+  split.i <- best.row$node.i
+  term.list <- c(term.list[-split.i], term.list[[split.i]]$split())
+}
+(tree.info <- rbindlist(tree.info.list))
+(grid.pred <- rbindlist(grid.pred.list))
+(rect.pred <- rbindlist(rect.pred.list))
+(train.pred <- rbindlist(train.pred.list))
+(node.layout <- rbindlist(node.layout.list))
+(candidate.dt <- rbindlist(candidate.dt.list)[
+, Feature := paste0("X",feature)
+])
 ggplot()+
+  facet_wrap("iteration", labeller=label_both,nrow=2)+
+  ## geom_tile(aes(
+  ##   V1, V2, fill=pred),
+  ##   color=NA,
+  ##   data=grid.pred)+
+  geom_rect(aes(
+    xmin=V1min, xmax=V1max,
+    ymin=V2min, ymax=V2max,
+    fill=pred),
+    data=rect.pred)+
+  geom_point(aes(
+    V1, V2, fill=y, color=correct),
+    shape=21,
+    data=train.pred)+
+  scale_color_manual(values=c("TRUE"="white","FALSE"="black"))+
+  scale_fill_gradient2(low="blue",high="red",midpoint=0.5)+
+  scale_x_continuous(breaks=seq(0,1,by=0.2))+
+  scale_y_continuous(breaks=seq(0,1,by=0.2))+
+  coord_equal()
+
+ggplot()+
+  facet_wrap("iteration", labeller=label_both,nrow=2)+
   geom_segment(aes(
     x, depth, 
     xend=parent.x, yend=parent.depth),
-    data=node.layout.dt)+
+    data=node.layout)+
   scale_fill_gradient2(
     "Prob(y=1)",
     low="deepskyblue",high="red",midpoint=0.5,
     na.value="grey")+
   geom_label(aes(
     x, depth, label=label, fill=ifelse(terminal, prob1, NA)),
-    data=node.layout.dt)+
+    data=node.layout)+
   scale_y_reverse()
+
+rect.w <- 0.5
+rect.h <- 0.3
+node.layout[, Node := id]
+candidate.dt[, Split := sprintf("X%d<%f", feature, split.point)][]
+last.pred <- rect.pred[
+, Node := id
+][iteration==max(iteration), .(id,V1min,V1max,V2min,V2max)]
+cand.join <- candidate.dt[
+  last.pred, on="id"
+][, `:=`(
+  x=ifelse(feature==1, split.point, V1min),
+  xend=ifelse(feature==1, split.point, V1max),
+  y=ifelse(feature==1, V2min, split.point),
+  yend=ifelse(feature==1, V2max, split.point)
+)][]
+best.hilite <- candidate.dt[
+, .SD[which.min(loss.split-loss.constant)]
+, by=iteration]
+best.layout <- node.layout[
+  best.hilite[, .(iteration,Node)],
+  on=.(iteration,Node)]
+best.color <- "green"
+best.size <- 4
+viz <- animint(
+  title="Greedy decision tree learning algorithm for binary classification (Breiman's CART)",
+  source="https://github.com/tdhock/2023-08-unsupervised-learning/blob/main/slides/20-decision-trees.Rmd",
+  loss=ggplot()+
+    ggtitle("Select iteration")+
+    theme_animint(width=300)+
+    geom_point(aes(
+      iteration, loss),
+      data=tree.info)+
+    scale_x_continuous("Iteration/split", breaks=tree.info$iteration)+
+    scale_y_continuous("Total logistic loss")+
+    make_tallrect(tree.info, "iteration"),
+  tree=ggplot()+
+    ggtitle("Tree at selected iteration")+
+    scale_x_continuous("<-yes no->", breaks=NULL)+
+    theme(legend.position="none")+
+    geom_segment(aes(
+      x, depth,
+      key=paste(id,parent),
+      xend=parent.x, yend=parent.depth),
+      showSelected="iteration",
+      data=node.layout)+
+    scale_fill_gradient2(
+      "Prob(y=1)",
+      low="deepskyblue",high="red",midpoint=0.5,
+      na.value="grey")+
+    geom_rect(aes(
+      xmin=x-rect.w, xmax=x+rect.w,
+      ymin=depth+rect.h, ymax=depth-rect.h,
+      key=id,
+      fill=ifelse(terminal, prob1, NA)),
+      color="black",
+      showSelected="iteration",
+      color_off="transparent",
+      clickSelects="Node",
+      data=node.layout)+
+    geom_point(aes(
+      x-rect.w*0.8, depth,
+      key=1),
+      data=best.layout,
+      fill=best.color,
+      size=best.size,
+      color="black",
+      showSelected="iteration")+
+    geom_text(aes(
+      x, depth+0.2, label=label,
+      key=id),
+      showSelected="iteration",
+      data=node.layout)+
+    geom_text(aes(
+      x, depth-0.05, label=paste0("N=",N),
+      key=id),
+      showSelected="iteration",
+      data=node.layout)+
+    scale_y_reverse(),
+  features=ggplot()+
+    ggtitle("Decisions at selected iteration")+
+    ## geom_tile(aes(
+    ##   V1, V2,
+    ##   key=grid_id,
+    ##   fill=pred),
+    ##   color=NA,
+    ##   showSelected="iteration",
+    ##   data=grid.pred)+
+    geom_rect(aes(
+      xmin=V1min, xmax=V1max,
+      ymin=V2min, ymax=V2max,
+      key=Node,
+      fill=ifelse(terminal, pred, NA)),
+      clickSelects="Node",
+      showSelected="iteration",
+      color="black",
+      color_off="transparent",
+      data=rect.pred)+
+    geom_point(aes(
+      V1, V2, fill=y,
+      key=row_id,
+      color=correct),
+      shape=21,
+      showSelected="iteration",
+      data=train.pred)+
+    scale_color_manual(values=c("TRUE"="white","FALSE"="black"))+
+    scale_fill_gradient2(
+      "Prob(y=1)",
+        low="deepskyblue",high="red",midpoint=0.5,
+        na.value="transparent")+
+    scale_x_continuous("Feature X1", breaks=seq(0,1,by=0.2))+
+    scale_y_continuous("Feature X2", breaks=seq(0,1,by=0.2))+
+    geom_segment(aes(
+      x, y,
+      key=Split,
+      xend=xend, yend=yend),
+      data=cand.join,
+      alpha=0.5,
+      showSelected=c("iteration","Node"),
+      clickSelects="Split")+
+    coord_equal(),
+  candidates=ggplot()+
+    ggtitle("Loss decrease for selected iteration; select Node and Split")+
+    theme_animint(width=1200)+
+    facet_grid(. ~ Feature, labeller=label_both)+
+    geom_point(aes(
+      split.point, loss.split-loss.constant,
+      key=1),
+      data=best.hilite,
+      fill=best.color,
+      color="black",
+      size=best.size,
+      showSelected="iteration")+
+    geom_tallrect(aes(
+      key=Split,
+      xmin=data.before,
+      xmax=data.after),
+      data=candidate.dt,
+      color=NA,
+      alpha=0.5,
+      clickSelects="Split",
+      showSelected=c("iteration","Node"))+
+    geom_line(aes(
+      split.point, loss.split-loss.constant,
+      group=id,
+      key=id),
+      size=3,
+      alpha=1,
+      alpha_off=0.2,
+      data=candidate.dt[, Node := id],
+      showSelected="iteration",
+      clickSelects="Node"),
+  duration=list(
+    iteration=2000)
+)
+
+animint2pages(viz, "2024-11-23-greedy-decision-tree")
+
+viz.dt <- data.table(
+  node.i=seq_along(term.list)
+)[
+, term.list[[node.i]]$loss
+, by=node.i]
+ggplot()+
+  geom_point(aes(
+    split.index, loss.split-loss.constant),
+    shape=1,
+    data=viz.dt)+
+  facet_grid(. ~ node.i + feature, labeller=label_both, scales="free")
+
+ggplot()+
+  geom_line(aes(
+    split.point, loss.split-loss.constant, group=node.i),
+    shape=1,
+    data=viz.dt)+
+  facet_grid(. ~ feature, labeller=label_both)
+
 
 
 ```
